[#23] Refacto
