# config/packages/nelmio_api_doc.yaml
@@ -34,42 +34,6 @@ nelmio_api_doc:
                                 application/json:
                                     schema:
                                         $ref: '#/components/schemas/Token'
-            /api/phones:
-                get:
-                    tags:
-                        - Phones
-                    summary: Récupère la liste des téléphones
-                    parameters:
-                        - in: path
-                          name: page
-                          schema:
-                              type: integer
-                          required: true
-                          description: Numeric ID
-                        - in: path
-                          name: limit
-                          schema:
-                              type: integer
-                          required: true
-                          description: Numeric ID
-            /api/phones/{id}:
-                get:
-                    tags:
-                        - Phones
-                    summary: Récupère le détail d'un téléphone
-            /api/customers/{id}:
-                get:
-                    tags:
-                        - Customers
-                    summary: Récupère le détail d'un utilisateur
-                    parameters:
-                        - in: path
-                          name: phoneId
-                          schema:
-                              type: integer
-                          required: true
-                          description: Numeric ID
-
         components:
             schemas:
                 Token:
